55959: [T][I1][Extra] - Issues after testing on iPhone SE under Safari browser

--- a/app/design/frontend/Fecon/theme/web/css/source/responsive/_product_page.less
+++ b/app/design/frontend/Fecon/theme/web/css/source/responsive/_product_page.less
@@ -400,20 +400,20 @@
                                 .page-title-wrapper {
                                 .page-title {
                                     span {
-                                            font-size: 30px !important;
+                                            font-size: 25px !important;
                                         }
                                     }
                                 }
                                 .product-info-price {
                                     .product-info-stock-sku {
-                                        left: -14px;
+                                        left: -9px;
                                     }
                                     .price-box {
                                         span.price-container {
                                             .price-wrapper {
                                                 span.price {
                                                     font-family: @font-family-name__verb;
-                                                    font-size: 30px;
+                                                    font-size: 25px;
                                                     font-weight: 600;
                                                     color: @color-black;
                                                 }
